// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PVs Resolver Correctly Resolves PVs Query 1`] = `
Object {
  "data": Object {
    "pvs": Array [],
  },
}
`;

exports[`PVs Resolver Correctly Resolves PVsClaims Query 1`] = `
Object {
  "data": Object {
    "pvsClaims": Array [],
  },
}
`;
